--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-custom-roulette": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "styled-components": "^5.3.6",
